--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "nuxt": "^2.15.7",
+    "uuid": "^8.3.2",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
