--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.15.1",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "fawn": "^2.1.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "nuxt": "^2.15.7",
