--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.0.12",
     "nuxt": "^2.15.7",
     "uuid": "^8.3.2",
+    "v-mask": "^2.3.0",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
