--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "fawn": "^2.1.5",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.2",
     "nuxt": "^2.15.7",
     "uuid": "^8.3.2",
     "v-mask": "^2.3.0",
