--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "Waskita",
+  "name": "waskita",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -16,6 +17,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.15.1",
+    "dateformat": "^5.0.2",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "fawn": "^2.1.5",
