--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/pwa": "^3.3.5",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.15.1",
-    "dateformat": "^5.0.2",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "fawn": "^2.1.5",
@@ -27,6 +27,7 @@
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.2",
     "nuxt": "^2.15.7",
+    "nuxt-sweetalert2": "^1.0.0",
     "uuid": "^8.3.2",
     "v-mask": "^2.3.0",
     "vuetify": "^2.5.5"
