--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
