--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nuxt-sweetalert2": "^1.0.0",
     "uuid": "^8.3.2",
     "v-mask": "^2.3.0",
+    "vue-cookies": "^1.7.4",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
