--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "uuid": "^8.3.2",
     "v-mask": "^2.3.0",
     "vue-cookies": "^1.7.4",
+    "vue-jwt-decode": "^0.1.0",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
