--- a/package.json
+++ b/package.json
@@ -48,5 +48,11 @@
     "eslint-plugin-vue": "^7.12.1",
     "jest": "^27.0.5",
     "vue-jest": "^3.0.4"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "1228"
+    }
   }
 }
