--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "yarn && nuxt",
     "build": "nuxt build",
     "start": "yarn dev",
     "generate": "nuxt generate",
