--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "yarn && nuxt",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "yarn dev",
+    "start": "yarn && yarn dev",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
