--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "git push heroku"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
