--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
     "vue/no-unused-components": "warn",
     "no-useless-escape": "off",
     "vue/component-definition-name-casing": "off",
-    "require-await": "warn"
+    "require-await": "warn",
+    "prefer-regex-literals": "off"
   }
 }
