--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "2.9.4",
     "core-js": "^3.15.1",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
@@ -34,6 +35,7 @@
     "secure-web-storage": "^1.0.2",
     "uuid": "^8.3.2",
     "v-mask": "^2.3.0",
+    "vue-chartjs": "^3.5.1",
     "vue-jwt-decode": "^0.1.0",
     "vuetify": "^2.5.5"
   },
